--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,7 @@
 
     <TextView android:id="@+id/info_view" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView android:id="@+id/rotation_view" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:layout_below="@id/info_view"/>
 
 </RelativeLayout>
