--- a/app/src/main/res/layout/activity_rotation.xml
+++ b/app/src/main/res/layout/activity_rotation.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.iapps.timesapp.RotationActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+   <!-- <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" /> -->
+    <TextView android:id="@+id/rotation_view" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:layout_below="@id/info_view"/>
 
 </RelativeLayout>
