--- a/app/src/main/res/layout/activity_rotation_activity2.xml
+++ b/app/src/main/res/layout/activity_rotation_activity2.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.iapps.timesapp.RotationActivity2">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:id="@+id/the_view"/>
 
 </RelativeLayout>
