--- a/app/src/main/res/layout/activity_gyro_rotation.xml
+++ b/app/src/main/res/layout/activity_gyro_rotation.xml
@@ -9,4 +9,18 @@
     <TextView android:id="@+id/gyro_rot_view" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView android:id="@+id/minute_view" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/gyro_rot_view" />
+
+    <TextView android:id="@+id/count_view" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toRightOf="@+id/gyro_rot_view" />
+
+
+
 </RelativeLayout>
