--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:id="@+id/activity_main_rotation" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <TextView android:id="@+id/activity_main_minutes" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/activity_main_rotation" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
