--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@drawable/background">
 
     <TextView android:id="@+id/activity_main_minutes"
         android:layout_width="match_parent"
@@ -12,6 +13,7 @@
         android:layout_alignParentStart="true"
         android:gravity="center"
         android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:textSize="72sp"/>
 
     <!--android:layout_width="wrap_content"
