--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,15 @@
         android:textColor="@android:color/white"
         android:textSize="72sp"/>
 
+    <ImageView
+        android:id="@+id/imageViewPhoneRot"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/telefonrot"
+        android:layout_marginBottom="25dp"
+        android:layout_alignBottom="@+id/activity_main_minutes"
+        android:layout_centerHorizontal="true" />
+
     <!--android:layout_width="wrap_content"
 android:layout_height="wrap_content"-->
 
